@@ -2,6 +2,7 @@ package com.capstone.uniculture.service;
 
 import com.capstone.uniculture.config.SecurityUtil;
 import com.capstone.uniculture.dto.Post.Request.PostAddDto;
+import com.capstone.uniculture.dto.Post.Request.PostListRequestDto;
 import com.capstone.uniculture.dto.Post.Request.PostUpdateDto;
 import com.capstone.uniculture.dto.Post.Response.PostDetailDto;
 import com.capstone.uniculture.dto.Post.Response.PostListDto;
@@ -12,13 +13,16 @@ import com.capstone.uniculture.entity.Post.*;
 import com.capstone.uniculture.repository.MemberRepository;
 import com.capstone.uniculture.repository.PostLikeRepository;
 import com.capstone.uniculture.repository.PostRepository;
+import jakarta.persistence.criteria.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -59,7 +63,7 @@ public class PostService {
         List<PostTag> postTags = postAddDto.getTag()
                 .stream().map(tag -> new PostTag(post, tag)).toList();
 
-        // 5. Repository 에 저장
+        // 5. Repository 에 저장(Post, PostTag 각각)
         postRepository.save(post);
         postTagService.createByList(postTags);
 
@@ -77,8 +81,16 @@ public class PostService {
             throw new RuntimeException("자신의 게시물이 아닙니다.");
         }
 
-        // 3. 수정하기
+        // 3. 태그 설정
+        List<PostTag> postTags = postUpdateDto.getTag()
+                .stream().map(tag -> new PostTag(post, tag)).toList();
+        postTagService.deleteAllById(post.getId());
+        postTagService.createByList(postTags);
+
+        // 4. 수정하기
         post.update(postUpdateDto);
+        if(postUpdateDto.getPostStatus() != null) // 스터디 수정으로 날라온 경우
+            post.setPostStatus(postUpdateDto.getPostStatus());
 
         return "게시물 수정 성공";
     }
@@ -164,15 +176,20 @@ public class PostService {
     }
 
     // 모든 게시물 조회
-    public Page<PostListDto> getAllPosts(Pageable pageable) {
-        Page<Post> posts = postRepository.findAllWithMemberAndComments(pageable);
+    public Page<PostListDto> getAllPosts(Pageable pageable, PostListRequestDto postListRequestDto) {
+        Page<Post> posts = postRepository.findAllWithMemberAndComments(pageable,
+                postListRequestDto.getPt(),
+                postListRequestDto.getCa(),
+                postListRequestDto.getPs()
+        );
         List<PostListDto> list = posts.getContent().stream()
                 .map(PostListDto::fromEntity)
                 .collect(Collectors.toList());
         return new PageImpl<>(list, pageable, posts.getTotalElements());
     }
 
-    // 게시물 타입에 따른 게시물 조회
+    // 게시물 타입에 따른 게시물 조회 (통합으로 인한 미사용)
+    /*
     public Page<PostListDto> getPostsByType(PostType postType, Pageable pageable) {
         Page<Post> posts = postRepository.findByPostTypeWithMember(postType, pageable);
         List<PostListDto> list = posts.getContent().stream()
@@ -181,37 +198,67 @@ public class PostService {
         return new PageImpl<>(list,pageable,posts.getTotalElements());
 
     }
+     */
 
     // 멤버 아이디에 따른 게시물 조회
-    public Page<PostListDto> getPostsByMember(Long memberId, Pageable pageable) {
-        Page<Post> posts = postRepository.findByMemberIdWithMember(memberId, pageable);
+    public Page<PostListDto> getPostsByMember(PostCategory postCategory, Long memberId, Pageable pageable) {
+
+        // 1. 카테고리와 아이디로 게시물 목록 가져오기 (Paging 처리)
+        Page<Post> posts = postRepository.findByMemberIdWithMember(postCategory, memberId, pageable);
+
+        // 2. Entity -> DTO 변환 (Fetch Join 을 했기에 Post.getMember().getNickname()을 하더라도 추가로 쿼리문이 나가지않음)
         List<PostListDto> list = posts.getContent().stream()
                 .map(PostListDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
+
         return new PageImpl<>(list,pageable,posts.getTotalElements());
     }
 
 
+    // 모든 게시물중 검색(카테고리, 제목, 태그에 따른)
     public Page<PostSearchDto> getAllPostsBySearch(PostCategory category, String content, List<String> tag, Pageable pageable) {
 
-        Page<Post> result = null;
+        // Page<Post> result = null;
+
+        Specification<Post> specification = (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+
+            predicates.add(criteriaBuilder.equal(root.get("postCategory"), category)); // category는 필수
+
+            if(content != null){
+                predicates.add(criteriaBuilder.like(root.get("title"), "%"+content+"%"));
+            }
+            if(tag != null){
+                Join<Post, PostTag> postTags = root.join("postTags", JoinType.INNER);
+                predicates.add(criteriaBuilder.and(postTags.get("hashtag").in(tag)));
+            }
+            return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
+        };
+
+        Page<Post> page = postRepository.findAll(specification, pageable);
 
         // 만약 Title로 조회한거 라면?
-        result = postRepository.findByTitleAndContentAndAuthorName(category, content, tag, pageable);
+        // result = postRepository.findByTitleAndContentAndAuthorName(category, content, tag, pageable);
 
-        List<PostSearchDto> list = result.getContent().stream()
+        List<PostSearchDto> list = page.getContent().stream()
                 .map(PostSearchDto::fromEntity)
                 .collect(Collectors.toList());
-        return new PageImpl<>(list, pageable, result.getTotalElements());
+        return new PageImpl<>(list, pageable, page.getTotalElements());
     }
 
     public Page<PostListDto> getMyFriendPosts(Pageable pageable) {
 
+        // 1. 나의 아이디 얻어오기
         Long memberId = SecurityUtil.getCurrentMemberId();
+
+        // 2. 내 친구인 Member 의 게시물만 가져오기
         Page<Post> posts = postRepository.findPostsFromMyFriends(memberId, pageable);
+
+        // 3. Entity -> DTO 변환 (Fetch Join 을 했기에 Post.getMember().getNickname()을 하더라도 추가로 쿼리문이 나가지않음)
         List<PostListDto> list = posts.getContent().stream()
                 .map(PostListDto::fromEntity)
                 .toList();
+
         return new PageImpl<>(list,pageable,posts.getTotalElements());
     }
 }
